# RobyGb

./: .gitignore  CMakeLists.txt  README.md
include/: Gb_bus.h  Gb_cartridge.h  Gb_core.h  Gb_emulator.h  Gb_interrupts.h  Gb_joypad.h  Gb_ppu.h  Gb_timer.h  Gb_types.h  Memory.h  Shader.h  Window.h
shaders/: frag.glsl
src/: Gb_bus.cpp  Gb_cartridge.cpp  Gb_core.cpp  Gb_emulator.cpp  Gb_joypad.cpp  Gb_ppu.cpp  Gb_timer.cpp  Memory.cpp  Shader.cpp  Window.cpp  main.cpp
tests/: CMakeLists.txt  test_Memory.cpp  test_core.cpp
tests/test_roms/: compile.sh  test_rom_8bit_loads.asm  test_rom_8bit_loads.gb
tests/test_roms/16bit_ld/: test_rom.asm  test_rom.gb  test_rom_sp.asm  test_rom_sp.gb
tests/test_roms/8bit_ld/: test_rom_01.asm  test_rom_01.gb
tests/test_roms/alu/: alu1.asm  alu1.gb
